// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Filter Sorter Snapshots default 1`] = `
<div
  class="f-filter-sorter v-card v-sheet theme--light"
>
  <form
    class="v-form"
    novalidate="novalidate"
  >
    <div
      class="container fluid"
    >
       
      <div
        class="layout f-filter-sorter__main-layout row wrap"
      >
        <div
          class="flex shrink"
        >
          <div
            class="v-card__text"
          >
            Filter:
          </div>
        </div>
         
        <div
          class="flex grow"
        >
          <div
            class="v-input v-text-field v-text-field--single-line v-text-field--solo v-text-field--solo-flat v-text-field--enclosed v-text-field--placeholder theme--light"
          >
            <div
              class="v-input__control"
            >
              <div
                class="v-input__slot"
              >
                <div
                  class="v-text-field__slot"
                >
                  <input
                    placeholder="Search by first name, last name and email address"
                    type="text"
                  />
                </div>
              </div>
              <div
                class="v-text-field__details"
              >
                <div
                  class="v-messages theme--light"
                >
                  <div
                    class="v-messages__wrapper"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
         
        <!---->
         
        <div
          class="flex shrink"
        >
          <button
            class="v-btn v-btn--large theme--light -text--text ma-0 "
            type="button"
          >
            <div
              class="v-btn__content"
            >
              
            More Filters
          
            </div>
          </button>
        </div>
         
      </div>
       
      <!---->
       
      <div
        class="layout f-filter-sorter__expanded-layout align-center justify-center row fill-height"
        style="display: none;"
      >
        <div
          class="flex"
        >
          <div
            class="layout row wrap"
          >
            <div
              class="flex lg3"
            >
              <div
                class="layout row"
              >
                <div
                  class="flex shrink"
                >
                  <div
                    class="v-card__text"
                  >
                    Status
                  </div>
                </div>
                 
                <div
                  class="flex"
                >
                  <div
                    class="v-input v-text-field v-text-field--single-line v-text-field--solo v-text-field--solo-flat v-text-field--enclosed v-text-field--placeholder v-select v-input--hide-details theme--light"
                    role="combobox"
                  >
                    <div
                      class="v-input__control"
                    >
                      <div
                        class="v-input__slot"
                      >
                        <div
                          class="v-select__slot"
                        >
                          <div
                            class="v-select__selections"
                          >
                            <input
                              aria-readonly="false"
                              autocomplete="on"
                              placeholder="All"
                              readonly="readonly"
                              type="text"
                            />
                          </div>
                          <div
                            class="v-input__append-inner"
                          >
                            <div
                              class="v-input__icon v-input__icon--append"
                            >
                              <i
                                aria-hidden="true"
                                class="v-icon material-icons theme--light"
                              >
                                arrow_drop_down
                              </i>
                            </div>
                          </div>
                        </div>
                        <div
                          class="v-menu"
                        >
                          <div
                            class="v-menu__content theme--light "
                            style="max-height: 300px; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 0; display: none;"
                          >
                            <div
                              class="v-select-list v-card theme--light"
                            >
                              <div
                                class="v-list theme--light"
                                role="list"
                              >
                                <div
                                  role="listitem"
                                >
                                  <a
                                    class="v-list__tile v-list__tile--link theme--light"
                                  >
                                    <div
                                      class="v-list__tile__content"
                                    >
                                      <div
                                        class="v-list__tile__title"
                                      >
                                        Active
                                      </div>
                                    </div>
                                  </a>
                                </div>
                                <div
                                  role="listitem"
                                >
                                  <a
                                    class="v-list__tile v-list__tile--link theme--light"
                                  >
                                    <div
                                      class="v-list__tile__content"
                                    >
                                      <div
                                        class="v-list__tile__title"
                                      >
                                        Pending
                                      </div>
                                    </div>
                                  </a>
                                </div>
                                <div
                                  role="listitem"
                                >
                                  <a
                                    class="v-list__tile v-list__tile--link theme--light"
                                  >
                                    <div
                                      class="v-list__tile__content"
                                    >
                                      <div
                                        class="v-list__tile__title"
                                      >
                                        On hold
                                      </div>
                                    </div>
                                  </a>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
             
            <div
              class="flex lg3"
            >
              <div
                class="layout row"
              >
                <div
                  class="flex shrink"
                >
                  <div
                    class="v-card__text"
                  >
                    Community
                  </div>
                </div>
                 
                <div
                  class="flex"
                >
                  <div
                    background-color="white"
                    class="v-menu mt-0 pt-0"
                    height="48"
                    placeholder="All"
                    term-param="filter[name]"
                    url="communities"
                  >
                    <div
                      class="v-input v-text-field v-text-field--placeholder v-input--hide-details v-input--is-readonly theme--light"
                    >
                      <div
                        class="v-input__control"
                      >
                        <div
                          class="v-input__slot white"
                          style="height: 48px;"
                        >
                          <div
                            class="v-text-field__slot"
                          >
                            <input
                              placeholder="All"
                              readonly="readonly"
                              term-param="filter[name]"
                              type="text"
                              url="communities"
                            />
                          </div>
                          <div
                            class="v-input__append-inner"
                          >
                            <div
                              class="v-input__icon v-input__icon--append"
                            >
                              <i
                                aria-hidden="true"
                                class="v-icon fas fa-caret-down theme--light"
                              />
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="v-menu__content theme--light "
                      style="max-height: auto; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 0; display: none;"
                    >
                       
                      <div
                        autofocus="autofocus"
                        background-color="white"
                        class="v-input v-text-field v-text-field--placeholder v-select v-autocomplete v-input--hide-details theme--light"
                        height="48"
                        menu-props="[object Object]"
                      >
                        <div
                          class="v-input__control"
                        >
                          <div
                            class="v-input__slot white"
                            style="height: 48px;"
                          >
                            <div
                              class="v-select__slot"
                            >
                              <div
                                class="v-select__selections"
                              >
                                <input
                                  aria-label=""
                                  autocomplete="off"
                                  autofocus="autofocus"
                                  placeholder="All"
                                  role="combobox"
                                  type="text"
                                />
                              </div>
                              <div
                                class="v-input__append-inner"
                              >
                                <div
                                  class="v-input__icon v-input__icon--"
                                >
                                  <i
                                    aria-hidden="true"
                                    class="v-icon v-icon--link material-icons theme--light"
                                  />
                                </div>
                              </div>
                              <div
                                class="v-input__append-inner"
                              >
                                <div
                                  class="v-input__icon v-input__icon--append"
                                >
                                  <i
                                    aria-hidden="true"
                                    class="v-icon material-icons theme--light"
                                  >
                                    arrow_drop_down
                                  </i>
                                </div>
                              </div>
                            </div>
                            <div
                              class="v-menu"
                            >
                              <div
                                class="v-menu__content theme--light v-autocomplete__content"
                                style="max-height: 300px; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 0; display: none;"
                              >
                                <div
                                  class="v-select-list v-card theme--light"
                                >
                                  <div
                                    class="v-list theme--light"
                                    role="list"
                                  >
                                    <div
                                      role="listitem"
                                      style="display: none;"
                                    >
                                      <div
                                        class="v-list__tile theme--light"
                                      >
                                        <span
                                          class="search-section-title"
                                        >
                                          SELECTION
                                        </span>
                                      </div>
                                    </div>
                                      
                                    <div
                                      role="listitem"
                                      style="display: none;"
                                    >
                                      <div
                                        class="v-list__tile theme--light"
                                      >
                                        <span
                                          class="search-section-title"
                                        >
                                          RESULTS
                                        </span>
                                      </div>
                                    </div>
                                    <div
                                      role="listitem"
                                    >
                                      <div
                                        class="v-list__tile theme--light"
                                      >
                                        <div
                                          class="v-list__tile__content"
                                        >
                                          <div
                                            class="v-list__tile__title"
                                          >
                                            No data available
                                          </div>
                                        </div>
                                      </div>
                                    </div>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
             
            <div
              class="flex lg3"
            >
              <div
                class="layout row"
              >
                <div
                  class="flex shrink"
                >
                  <div
                    class="v-card__text"
                  >
                    Discipline
                  </div>
                </div>
                 
                <div
                  class="flex"
                >
                  <div
                    class="v-input v-text-field v-text-field--single-line v-text-field--solo v-text-field--solo-flat v-text-field--enclosed v-text-field--placeholder v-select v-input--hide-details theme--light"
                    role="combobox"
                  >
                    <div
                      class="v-input__control"
                    >
                      <div
                        class="v-input__slot"
                      >
                        <div
                          class="v-select__slot"
                        >
                          <div
                            class="v-select__selections"
                          >
                            <input
                              aria-readonly="false"
                              autocomplete="on"
                              placeholder="All"
                              readonly="readonly"
                              type="text"
                            />
                          </div>
                          <div
                            class="v-input__append-inner"
                          >
                            <div
                              class="v-input__icon v-input__icon--append"
                            >
                              <i
                                aria-hidden="true"
                                class="v-icon material-icons theme--light"
                              >
                                arrow_drop_down
                              </i>
                            </div>
                          </div>
                        </div>
                        <div
                          class="v-menu"
                        >
                          <div
                            class="v-menu__content theme--light "
                            style="max-height: 300px; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 0; display: none;"
                          >
                            <div
                              class="v-select-list v-card theme--light"
                            >
                              <div
                                class="v-list theme--light"
                                role="list"
                              >
                                <div
                                  role="listitem"
                                >
                                  <a
                                    class="v-list__tile v-list__tile--link theme--light"
                                  >
                                    <div
                                      class="v-list__tile__content"
                                    >
                                      <div
                                        class="v-list__tile__title"
                                      >
                                        Accounting
                                      </div>
                                    </div>
                                  </a>
                                </div>
                                <div
                                  role="listitem"
                                >
                                  <a
                                    class="v-list__tile v-list__tile--link theme--light"
                                  >
                                    <div
                                      class="v-list__tile__content"
                                    >
                                      <div
                                        class="v-list__tile__title"
                                      >
                                        Communication
                                      </div>
                                    </div>
                                  </a>
                                </div>
                                <div
                                  role="listitem"
                                >
                                  <a
                                    class="v-list__tile v-list__tile--link theme--light"
                                  >
                                    <div
                                      class="v-list__tile__content"
                                    >
                                      <div
                                        class="v-list__tile__title"
                                      >
                                        Dining
                                      </div>
                                    </div>
                                  </a>
                                </div>
                                <div
                                  role="listitem"
                                >
                                  <a
                                    class="v-list__tile v-list__tile--link theme--light"
                                  >
                                    <div
                                      class="v-list__tile__content"
                                    >
                                      <div
                                        class="v-list__tile__title"
                                      >
                                        Engagement
                                      </div>
                                    </div>
                                  </a>
                                </div>
                                <div
                                  role="listitem"
                                >
                                  <a
                                    class="v-list__tile v-list__tile--link theme--light"
                                  >
                                    <div
                                      class="v-list__tile__content"
                                    >
                                      <div
                                        class="v-list__tile__title"
                                      >
                                        Maintenance
                                      </div>
                                    </div>
                                  </a>
                                </div>
                                <div
                                  role="listitem"
                                >
                                  <a
                                    class="v-list__tile v-list__tile--link theme--light"
                                  >
                                    <div
                                      class="v-list__tile__content"
                                    >
                                      <div
                                        class="v-list__tile__title"
                                      >
                                        Operations
                                      </div>
                                    </div>
                                  </a>
                                </div>
                                <div
                                  role="listitem"
                                >
                                  <a
                                    class="v-list__tile v-list__tile--link theme--light"
                                  >
                                    <div
                                      class="v-list__tile__content"
                                    >
                                      <div
                                        class="v-list__tile__title"
                                      >
                                        People
                                      </div>
                                    </div>
                                  </a>
                                </div>
                                <div
                                  role="listitem"
                                >
                                  <a
                                    class="v-list__tile v-list__tile--link theme--light"
                                  >
                                    <div
                                      class="v-list__tile__content"
                                    >
                                      <div
                                        class="v-list__tile__title"
                                      >
                                        Resident Care
                                      </div>
                                    </div>
                                  </a>
                                </div>
                                <div
                                  role="listitem"
                                >
                                  <a
                                    class="v-list__tile v-list__tile--link theme--light"
                                  >
                                    <div
                                      class="v-list__tile__content"
                                    >
                                      <div
                                        class="v-list__tile__title"
                                      >
                                        Sales
                                      </div>
                                    </div>
                                  </a>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
             
            <div
              class="flex lg3"
            >
              <div
                class="layout row"
              >
                <div
                  class="flex shrink"
                >
                  <div
                    class="v-card__text"
                  >
                    Role
                  </div>
                </div>
                 
                <div
                  class="flex"
                >
                  <div
                    background-color="white"
                    class="v-menu mt-0 pt-0"
                    height="48"
                    placeholder="All"
                    term-param="filter[name]"
                    url="roles"
                  >
                    <div
                      class="v-input v-text-field v-text-field--placeholder v-input--hide-details v-input--is-readonly theme--light"
                    >
                      <div
                        class="v-input__control"
                      >
                        <div
                          class="v-input__slot white"
                          style="height: 48px;"
                        >
                          <div
                            class="v-text-field__slot"
                          >
                            <input
                              placeholder="All"
                              readonly="readonly"
                              term-param="filter[name]"
                              type="text"
                              url="roles"
                            />
                          </div>
                          <div
                            class="v-input__append-inner"
                          >
                            <div
                              class="v-input__icon v-input__icon--append"
                            >
                              <i
                                aria-hidden="true"
                                class="v-icon fas fa-caret-down theme--light"
                              />
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="v-menu__content theme--light "
                      style="max-height: auto; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 0; display: none;"
                    >
                       
                      <div
                        autofocus="autofocus"
                        background-color="white"
                        class="v-input v-text-field v-text-field--placeholder v-select v-autocomplete v-input--hide-details theme--light"
                        height="48"
                        menu-props="[object Object]"
                      >
                        <div
                          class="v-input__control"
                        >
                          <div
                            class="v-input__slot white"
                            style="height: 48px;"
                          >
                            <div
                              class="v-select__slot"
                            >
                              <div
                                class="v-select__selections"
                              >
                                <input
                                  aria-label=""
                                  autocomplete="off"
                                  autofocus="autofocus"
                                  placeholder="All"
                                  role="combobox"
                                  type="text"
                                />
                              </div>
                              <div
                                class="v-input__append-inner"
                              >
                                <div
                                  class="v-input__icon v-input__icon--"
                                >
                                  <i
                                    aria-hidden="true"
                                    class="v-icon v-icon--link material-icons theme--light"
                                  />
                                </div>
                              </div>
                              <div
                                class="v-input__append-inner"
                              >
                                <div
                                  class="v-input__icon v-input__icon--append"
                                >
                                  <i
                                    aria-hidden="true"
                                    class="v-icon material-icons theme--light"
                                  >
                                    arrow_drop_down
                                  </i>
                                </div>
                              </div>
                            </div>
                            <div
                              class="v-menu"
                            >
                              <div
                                class="v-menu__content theme--light v-autocomplete__content"
                                style="max-height: 300px; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 0; display: none;"
                              >
                                <div
                                  class="v-select-list v-card theme--light"
                                >
                                  <div
                                    class="v-list theme--light"
                                    role="list"
                                  >
                                    <div
                                      role="listitem"
                                      style="display: none;"
                                    >
                                      <div
                                        class="v-list__tile theme--light"
                                      >
                                        <span
                                          class="search-section-title"
                                        >
                                          SELECTION
                                        </span>
                                      </div>
                                    </div>
                                      
                                    <div
                                      role="listitem"
                                      style="display: none;"
                                    >
                                      <div
                                        class="v-list__tile theme--light"
                                      >
                                        <span
                                          class="search-section-title"
                                        >
                                          RESULTS
                                        </span>
                                      </div>
                                    </div>
                                    <div
                                      role="listitem"
                                    >
                                      <div
                                        class="v-list__tile theme--light"
                                      >
                                        <div
                                          class="v-list__tile__content"
                                        >
                                          <div
                                            class="v-list__tile__title"
                                          >
                                            No data available
                                          </div>
                                        </div>
                                      </div>
                                    </div>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
         
        <div
          class="flex text-no-wrap"
        >
          <button
            class="v-btn v-btn--large theme--light undefined-text--text"
            type="button"
          >
            <div
              class="v-btn__content"
            >
              
            Clear Filters
          
            </div>
          </button>
        </div>
      </div>
    </div>
  </form>
</div>
`;

exports[`Filter Sorter Snapshots toggle expanded 1`] = `
<div
  class="f-filter-sorter v-card v-sheet theme--light"
>
  <form
    class="v-form"
    novalidate="novalidate"
  >
    <div
      class="container fluid"
    >
       
      <div
        class="layout f-filter-sorter__main-layout row wrap"
      >
        <div
          class="flex shrink"
        >
          <div
            class="v-card__text"
          >
            Filter:
          </div>
        </div>
         
        <div
          class="flex grow"
        >
          <div
            class="v-input v-text-field v-text-field--single-line v-text-field--solo v-text-field--solo-flat v-text-field--enclosed v-text-field--placeholder theme--light"
          >
            <div
              class="v-input__control"
            >
              <div
                class="v-input__slot"
              >
                <div
                  class="v-text-field__slot"
                >
                  <input
                    placeholder="Search by first name, last name and email address"
                    type="text"
                  />
                </div>
              </div>
              <div
                class="v-text-field__details"
              >
                <div
                  class="v-messages theme--light"
                >
                  <div
                    class="v-messages__wrapper"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
         
        <!---->
         
        <div
          class="flex shrink"
        >
          <button
            class="v-btn v-btn--large theme--light -text--text ma-0 "
            type="button"
          >
            <div
              class="v-btn__content"
            >
              
            Less Filters
          
            </div>
          </button>
        </div>
         
      </div>
       
      <hr
        class="v-divider theme--light"
      />
       
      <div
        class="layout f-filter-sorter__expanded-layout align-center justify-center row fill-height"
        style=""
      >
        <div
          class="flex"
        >
          <div
            class="layout row wrap"
          >
            <div
              class="flex lg3"
            >
              <div
                class="layout row"
              >
                <div
                  class="flex shrink"
                >
                  <div
                    class="v-card__text"
                  >
                    Status
                  </div>
                </div>
                 
                <div
                  class="flex"
                >
                  <div
                    class="v-input v-text-field v-text-field--single-line v-text-field--solo v-text-field--solo-flat v-text-field--enclosed v-text-field--placeholder v-select v-input--hide-details theme--light"
                    role="combobox"
                  >
                    <div
                      class="v-input__control"
                    >
                      <div
                        class="v-input__slot"
                      >
                        <div
                          class="v-select__slot"
                        >
                          <div
                            class="v-select__selections"
                          >
                            <input
                              aria-readonly="false"
                              autocomplete="on"
                              placeholder="All"
                              readonly="readonly"
                              type="text"
                            />
                          </div>
                          <div
                            class="v-input__append-inner"
                          >
                            <div
                              class="v-input__icon v-input__icon--append"
                            >
                              <i
                                aria-hidden="true"
                                class="v-icon material-icons theme--light"
                              >
                                arrow_drop_down
                              </i>
                            </div>
                          </div>
                        </div>
                        <div
                          class="v-menu"
                        >
                          <div
                            class="v-menu__content theme--light "
                            style="max-height: 300px; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 0; display: none;"
                          >
                            <div
                              class="v-select-list v-card theme--light"
                            >
                              <div
                                class="v-list theme--light"
                                role="list"
                              >
                                <div
                                  role="listitem"
                                >
                                  <a
                                    class="v-list__tile v-list__tile--link theme--light"
                                  >
                                    <div
                                      class="v-list__tile__content"
                                    >
                                      <div
                                        class="v-list__tile__title"
                                      >
                                        Active
                                      </div>
                                    </div>
                                  </a>
                                </div>
                                <div
                                  role="listitem"
                                >
                                  <a
                                    class="v-list__tile v-list__tile--link theme--light"
                                  >
                                    <div
                                      class="v-list__tile__content"
                                    >
                                      <div
                                        class="v-list__tile__title"
                                      >
                                        Pending
                                      </div>
                                    </div>
                                  </a>
                                </div>
                                <div
                                  role="listitem"
                                >
                                  <a
                                    class="v-list__tile v-list__tile--link theme--light"
                                  >
                                    <div
                                      class="v-list__tile__content"
                                    >
                                      <div
                                        class="v-list__tile__title"
                                      >
                                        On hold
                                      </div>
                                    </div>
                                  </a>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
             
            <div
              class="flex lg3"
            >
              <div
                class="layout row"
              >
                <div
                  class="flex shrink"
                >
                  <div
                    class="v-card__text"
                  >
                    Community
                  </div>
                </div>
                 
                <div
                  class="flex"
                >
                  <div
                    class="v-input v-text-field v-text-field--placeholder v-input--hide-details v-input--is-readonly theme--light"
                  >
                    <div
                      class="v-input__control"
                    >
                      <div
                        class="v-input__slot white"
                        style="height: 48px;"
                      >
                        <div
                          class="v-text-field__slot"
                        >
                          <input
                            placeholder="All"
                            readonly="readonly"
                            term-param="filter[name]"
                            type="text"
                            url="communities"
                          />
                        </div>
                        <div
                          class="v-input__append-inner"
                        >
                          <div
                            class="v-input__icon v-input__icon--append"
                          >
                            <i
                              aria-hidden="true"
                              class="v-icon fas fa-caret-down theme--light"
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    background-color="white"
                    class="v-menu mt-0 pt-0"
                    height="48"
                    placeholder="All"
                    term-param="filter[name]"
                    url="communities"
                  >
                    <div
                      class="v-menu__content theme--light "
                      style="max-height: auto; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 0; display: none;"
                    >
                       
                      <div
                        autofocus="autofocus"
                        background-color="white"
                        class="v-input v-text-field v-text-field--placeholder v-select v-autocomplete v-input--hide-details v-input--is-focused theme--light primary--text"
                        height="48"
                        menu-props="[object Object]"
                      >
                        <div
                          class="v-input__control"
                        >
                          <div
                            class="v-input__slot white"
                            style="height: 48px;"
                          >
                            <div
                              class="v-select__slot"
                            >
                              <div
                                class="v-select__selections"
                              >
                                <input
                                  aria-label=""
                                  autocomplete="off"
                                  autofocus="autofocus"
                                  placeholder="All"
                                  role="combobox"
                                  type="text"
                                />
                              </div>
                              <div
                                class="v-input__append-inner"
                              >
                                <div
                                  class="v-input__icon v-input__icon--"
                                >
                                  <i
                                    aria-hidden="true"
                                    class="v-icon v-icon--link material-icons theme--light primary--text"
                                  />
                                </div>
                              </div>
                              <div
                                class="v-input__append-inner"
                              >
                                <div
                                  class="v-input__icon v-input__icon--append"
                                >
                                  <i
                                    aria-hidden="true"
                                    class="v-icon material-icons theme--light primary--text"
                                  >
                                    arrow_drop_down
                                  </i>
                                </div>
                              </div>
                            </div>
                            <div
                              class="v-menu"
                            >
                              <div
                                class="v-menu__content theme--light v-autocomplete__content"
                                style="max-height: 300px; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 0; display: none;"
                              >
                                <div
                                  class="v-select-list v-card theme--light"
                                >
                                  <div
                                    class="v-list theme--light"
                                    role="list"
                                  >
                                    <div
                                      role="listitem"
                                      style="display: none;"
                                    >
                                      <div
                                        class="v-list__tile theme--light"
                                      >
                                        <span
                                          class="search-section-title"
                                        >
                                          SELECTION
                                        </span>
                                      </div>
                                    </div>
                                      
                                    <div
                                      role="listitem"
                                      style="display: none;"
                                    >
                                      <div
                                        class="v-list__tile theme--light"
                                      >
                                        <span
                                          class="search-section-title"
                                        >
                                          RESULTS
                                        </span>
                                      </div>
                                    </div>
                                    <div
                                      role="listitem"
                                    >
                                      <div
                                        class="v-list__tile theme--light"
                                      >
                                        <div
                                          class="v-list__tile__content"
                                        >
                                          <div
                                            class="v-list__tile__title"
                                          >
                                            No data available
                                          </div>
                                        </div>
                                      </div>
                                    </div>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
             
            <div
              class="flex lg3"
            >
              <div
                class="layout row"
              >
                <div
                  class="flex shrink"
                >
                  <div
                    class="v-card__text"
                  >
                    Discipline
                  </div>
                </div>
                 
                <div
                  class="flex"
                >
                  <div
                    class="v-input v-text-field v-text-field--single-line v-text-field--solo v-text-field--solo-flat v-text-field--enclosed v-text-field--placeholder v-select v-input--hide-details theme--light"
                    role="combobox"
                  >
                    <div
                      class="v-input__control"
                    >
                      <div
                        class="v-input__slot"
                      >
                        <div
                          class="v-select__slot"
                        >
                          <div
                            class="v-select__selections"
                          >
                            <input
                              aria-readonly="false"
                              autocomplete="on"
                              placeholder="All"
                              readonly="readonly"
                              type="text"
                            />
                          </div>
                          <div
                            class="v-input__append-inner"
                          >
                            <div
                              class="v-input__icon v-input__icon--append"
                            >
                              <i
                                aria-hidden="true"
                                class="v-icon material-icons theme--light"
                              >
                                arrow_drop_down
                              </i>
                            </div>
                          </div>
                        </div>
                        <div
                          class="v-menu"
                        >
                          <div
                            class="v-menu__content theme--light "
                            style="max-height: 300px; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 0; display: none;"
                          >
                            <div
                              class="v-select-list v-card theme--light"
                            >
                              <div
                                class="v-list theme--light"
                                role="list"
                              >
                                <div
                                  role="listitem"
                                >
                                  <a
                                    class="v-list__tile v-list__tile--link theme--light"
                                  >
                                    <div
                                      class="v-list__tile__content"
                                    >
                                      <div
                                        class="v-list__tile__title"
                                      >
                                        Accounting
                                      </div>
                                    </div>
                                  </a>
                                </div>
                                <div
                                  role="listitem"
                                >
                                  <a
                                    class="v-list__tile v-list__tile--link theme--light"
                                  >
                                    <div
                                      class="v-list__tile__content"
                                    >
                                      <div
                                        class="v-list__tile__title"
                                      >
                                        Communication
                                      </div>
                                    </div>
                                  </a>
                                </div>
                                <div
                                  role="listitem"
                                >
                                  <a
                                    class="v-list__tile v-list__tile--link theme--light"
                                  >
                                    <div
                                      class="v-list__tile__content"
                                    >
                                      <div
                                        class="v-list__tile__title"
                                      >
                                        Dining
                                      </div>
                                    </div>
                                  </a>
                                </div>
                                <div
                                  role="listitem"
                                >
                                  <a
                                    class="v-list__tile v-list__tile--link theme--light"
                                  >
                                    <div
                                      class="v-list__tile__content"
                                    >
                                      <div
                                        class="v-list__tile__title"
                                      >
                                        Engagement
                                      </div>
                                    </div>
                                  </a>
                                </div>
                                <div
                                  role="listitem"
                                >
                                  <a
                                    class="v-list__tile v-list__tile--link theme--light"
                                  >
                                    <div
                                      class="v-list__tile__content"
                                    >
                                      <div
                                        class="v-list__tile__title"
                                      >
                                        Maintenance
                                      </div>
                                    </div>
                                  </a>
                                </div>
                                <div
                                  role="listitem"
                                >
                                  <a
                                    class="v-list__tile v-list__tile--link theme--light"
                                  >
                                    <div
                                      class="v-list__tile__content"
                                    >
                                      <div
                                        class="v-list__tile__title"
                                      >
                                        Operations
                                      </div>
                                    </div>
                                  </a>
                                </div>
                                <div
                                  role="listitem"
                                >
                                  <a
                                    class="v-list__tile v-list__tile--link theme--light"
                                  >
                                    <div
                                      class="v-list__tile__content"
                                    >
                                      <div
                                        class="v-list__tile__title"
                                      >
                                        People
                                      </div>
                                    </div>
                                  </a>
                                </div>
                                <div
                                  role="listitem"
                                >
                                  <a
                                    class="v-list__tile v-list__tile--link theme--light"
                                  >
                                    <div
                                      class="v-list__tile__content"
                                    >
                                      <div
                                        class="v-list__tile__title"
                                      >
                                        Resident Care
                                      </div>
                                    </div>
                                  </a>
                                </div>
                                <div
                                  role="listitem"
                                >
                                  <a
                                    class="v-list__tile v-list__tile--link theme--light"
                                  >
                                    <div
                                      class="v-list__tile__content"
                                    >
                                      <div
                                        class="v-list__tile__title"
                                      >
                                        Sales
                                      </div>
                                    </div>
                                  </a>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
             
            <div
              class="flex lg3"
            >
              <div
                class="layout row"
              >
                <div
                  class="flex shrink"
                >
                  <div
                    class="v-card__text"
                  >
                    Role
                  </div>
                </div>
                 
                <div
                  class="flex"
                >
                  <div
                    class="v-input v-text-field v-text-field--placeholder v-input--hide-details v-input--is-readonly theme--light"
                  >
                    <div
                      class="v-input__control"
                    >
                      <div
                        class="v-input__slot white"
                        style="height: 48px;"
                      >
                        <div
                          class="v-text-field__slot"
                        >
                          <input
                            placeholder="All"
                            readonly="readonly"
                            term-param="filter[name]"
                            type="text"
                            url="roles"
                          />
                        </div>
                        <div
                          class="v-input__append-inner"
                        >
                          <div
                            class="v-input__icon v-input__icon--append"
                          >
                            <i
                              aria-hidden="true"
                              class="v-icon fas fa-caret-down theme--light"
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    background-color="white"
                    class="v-menu mt-0 pt-0"
                    height="48"
                    placeholder="All"
                    term-param="filter[name]"
                    url="roles"
                  >
                    <div
                      class="v-menu__content theme--light "
                      style="max-height: auto; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 0; display: none;"
                    >
                       
                      <div
                        autofocus="autofocus"
                        background-color="white"
                        class="v-input v-text-field v-text-field--placeholder v-select v-autocomplete v-input--hide-details v-input--is-focused theme--light primary--text"
                        height="48"
                        menu-props="[object Object]"
                      >
                        <div
                          class="v-input__control"
                        >
                          <div
                            class="v-input__slot white"
                            style="height: 48px;"
                          >
                            <div
                              class="v-select__slot"
                            >
                              <div
                                class="v-select__selections"
                              >
                                <input
                                  aria-label=""
                                  autocomplete="off"
                                  autofocus="autofocus"
                                  placeholder="All"
                                  role="combobox"
                                  type="text"
                                />
                              </div>
                              <div
                                class="v-input__append-inner"
                              >
                                <div
                                  class="v-input__icon v-input__icon--"
                                >
                                  <i
                                    aria-hidden="true"
                                    class="v-icon v-icon--link material-icons theme--light primary--text"
                                  />
                                </div>
                              </div>
                              <div
                                class="v-input__append-inner"
                              >
                                <div
                                  class="v-input__icon v-input__icon--append"
                                >
                                  <i
                                    aria-hidden="true"
                                    class="v-icon material-icons theme--light primary--text"
                                  >
                                    arrow_drop_down
                                  </i>
                                </div>
                              </div>
                            </div>
                            <div
                              class="v-menu"
                            >
                              <div
                                class="v-menu__content theme--light v-autocomplete__content"
                                style="max-height: 300px; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 0; display: none;"
                              >
                                <div
                                  class="v-select-list v-card theme--light"
                                >
                                  <div
                                    class="v-list theme--light"
                                    role="list"
                                  >
                                    <div
                                      role="listitem"
                                      style="display: none;"
                                    >
                                      <div
                                        class="v-list__tile theme--light"
                                      >
                                        <span
                                          class="search-section-title"
                                        >
                                          SELECTION
                                        </span>
                                      </div>
                                    </div>
                                      
                                    <div
                                      role="listitem"
                                      style="display: none;"
                                    >
                                      <div
                                        class="v-list__tile theme--light"
                                      >
                                        <span
                                          class="search-section-title"
                                        >
                                          RESULTS
                                        </span>
                                      </div>
                                    </div>
                                    <div
                                      role="listitem"
                                    >
                                      <div
                                        class="v-list__tile theme--light"
                                      >
                                        <div
                                          class="v-list__tile__content"
                                        >
                                          <div
                                            class="v-list__tile__title"
                                          >
                                            No data available
                                          </div>
                                        </div>
                                      </div>
                                    </div>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
         
        <div
          class="flex text-no-wrap"
        >
          <button
            class="v-btn v-btn--large theme--light undefined-text--text"
            type="button"
          >
            <div
              class="v-btn__content"
            >
              
            Clear Filters
          
            </div>
          </button>
        </div>
      </div>
    </div>
  </form>
</div>
`;
